Temporarely removed trainsets in Block destinations. Smaller font to avoid page overflow in driver duty page.

--- a/src/App.Client/Components/DutyPartPage.razor.css
+++ b/src/App.Client/Components/DutyPartPage.razor.css
@@ -39,8 +39,8 @@
 
 .train.call {
     vertical-align: text-top;
-    font-size: 11pt;
-    line-height: 15pt;
+    font-size: 10pt;
+    line-height: 13pt;
 }
 
     .train.call.header {
